Add camera controls

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   </head>
   <body>
     <script src='three.min.js'></script>
+    <script src='camera_controls.js'></script>
     <script src='scene.js'></script>
   </body>
 </html>
