--- a/index.html
+++ b/index.html
@@ -17,10 +17,22 @@
         margin: 0;
         padding: 0;
       }
+
+      #annotation-content {
+        background: white;
+        position: absolute;
+        /*top: -1000%;*/
+        padding: 1em;
+        font-family: sans-serif;
+        font-size: 1.5em;
+        /*transform: translateX(-50%) translateY(-180%);*/
+      }
     </style>
   </head>
   <body>
+    <div id='annotation-content'></div>
     <script src='three.min.js'></script>
+    <script src='threex.domevents.js'></script>
     <script src='camera_controls.js'></script>
     <script src='scene.js'></script>
   </body>
